--- a/frontend/src/components/EditForm.css
+++ b/frontend/src/components/EditForm.css
@@ -16,6 +16,7 @@
 @media (max-width: 768px) {
   .well {
     flex-direction: column;
+    gap: .5rem;
   }
 
   .form-container,
@@ -30,7 +31,5 @@
   .btn {
     margin: 0 0;
   }
-  .mb-2, .mb-3 {
-    margin-bottom: 0.5rem;
-  }
+
 }
